--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <select id="filterType">
                 <option value="lowpass">lowpass</option>
                 <option value="highpass">highpass</option>
-                <option value="bandpath">bandpath</option>
+                <option value="bandpass">bandpass</option>
                 <option value="lowshelf">lowshelf</option>
                 <option value="highshelf">highshelf</option>
                 <option value="peaking">peaking</option>
