--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <option value="peaking">peaking</option>
 
             </select>
-            <input id="filterFreq" type="range" value="5000" max="10000" min="20" step="20">filter frequency</input>
+            <input id="filterFreq" type="range" value="100" max="600" min="20" step="5">filter frequency</input>
             <input id="filterGain" type="range" value="25" max="100" min="0" step="5">filter gain</input>
-            <input type="range"></input>
+            <input id="qFactor" type="range" value="20" max="100" min="0" step="1">Q factor</input>
             <input id="gain" type="range" value="1" min="1">gain</input>
         </div>
         <div class="keyboard">
